No hardcoded logins

--- a/new site/contacts.html
+++ b/new site/contacts.html
@@ -112,7 +112,7 @@
 
   <script>
     var favoriteMovie = sessionStorage.getItem('favoriteMovie');
-    favoriteMovie = "62fbf36813f65684eee1746c";
+    //favoriteMovie = "62fbf36813f65684eee1746c";
     var list = document.getElementById('threats');
 
 
