--- a/new site/mapscreen.html
+++ b/new site/mapscreen.html
@@ -166,7 +166,7 @@ button:hover {
 
         window.marks = [];
         window.favoriteMovie = sessionStorage.getItem('favoriteMovie');
-        document.getElementById("sss").innerHTML = window.favoriteMovie;
+        //document.getElementById("sss").innerHTML = window.favoriteMovie;
         /*axios.post(servloc+'/poi', {})
             .then(function (response) {
                 for(pooi of response.data){
