--- a/new site/report.html
+++ b/new site/report.html
@@ -97,7 +97,7 @@
     </div>
     <script>
       var favoriteMovie = sessionStorage.getItem('favoriteMovie');
-      favoriteMovie = "62fbf38113f65684eee1746e";
+      //favoriteMovie = "62fbf38113f65684eee1746e";
 
       var vorm = document.getElementById('covid_form');
     vorm.addEventListener('submit', function (ev) {
