--- a/new site/user_settings.html
+++ b/new site/user_settings.html
@@ -108,7 +108,7 @@ div.outset {border-style: outset;}
  
     <script>
       var favoriteMovie = sessionStorage.getItem('favoriteMovie');
-      favoriteMovie = "62fbf36813f65684eee1746c";
+      //favoriteMovie = "62fbf36813f65684eee1746c";
       var list_visit = document.getElementById('mystory');
       var list_19 = document.getElementById('mydeath');
 
