--- a/new site/manager.html
+++ b/new site/manager.html
@@ -4,7 +4,7 @@
     <title>Admin Screen</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="http://code.highcharttable.org/2.0.0/jquery.highchartTable-min.js" type="text/javascript"></script>
+    <script src="jquery.highchartTable-min.js" type="text/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="serverlocation.js"></script>
